--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 annotated-types==0.7.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
+colorama==0.4.6
 greenlet==3.1.1
 idna==3.10
+loguru==0.7.3
 numpy==2.2.3
 pandas==2.2.3
 psycopg2==2.9.10
@@ -18,3 +20,4 @@ SQLAlchemy==2.0.38
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
+win32_setctime==1.2.0
